# phosphor-ted-sensor

./: README.md  meson.build  phosphor-ted-sensor.service.in  ted_sensor_config.json
src/: main.cpp  tedSensor.cpp  tedSensor.hpp  tedSensors.cpp  tedSensors.hpp  threshold.hpp
